best-practices/add_networkpolicy_dns/e2e/02-policy.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- ../add-networkpolicy-dns.yaml
assert:
- policy-assert.yaml
