best-practices/add_networkpolicy_dns/e2e/npolicy.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
assert:
- ../generatedResource.yaml
error:
- notGeneratedResource.yaml
