best-practices/add_networkpolicy_dns/e2e/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-networkpolicy-dns
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
